# BetParser

./: .gitignore  main.py  pyproject.toml
match_scraper/: matches_scraper.py
